<resources>
    <string name="app_name">Trolybabau</string>

    <array name="character">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>X</item>
        <item>Y</item>
    </array>

    //main tab
    <string name="tv_trang_chu">Trang chủ</string>
    <string name="tv_trang_thai_ky">Thai kỳ</string>
    <string name="tv_trang_nhat_ky">Nhật ký</string>
    <string name="tv_trang_chi_so">Chỉ số</string>
    <string name="tv_trang_kien_thuc">Kiến thức</string>
    <string name="tv_thong_tin_du_sinh">Thông tin dự sinh</string>
    <string name="tv_ten_me">Tên của mẹ</string>
    <string name="tv_ten_be">Tên của bé</string>
    <string name="tv_can_nang">Cân nặng</string>
    <string name="tv_them_chi_so_thai_nhi">Thêm chỉ số thai nhi</string>
    <string name="tv_du_sinh">Dự sinh</string>
    <string name="tv_tuoi_thai">Tuổi thai</string>
    <string name="tv_close">Đóng</string>
    <string name="tv_save">Lưu</string>
    <string name="tv_tuan">Tuần</string>
    <string name="tv_ngay">Ngày</string>
    <string name="tv_ky_kinh_cuoi">Kỳ kinh cuối</string>
    <string name="tv_huy">Hủy</string>
    <string name="tv_today">Hôm nay</string>
    <string name="tv_thang">Tháng</string>
    <string name="tv_nam">Năm</string>
    <string name="tv_goc_chia_se">Góc chia sẻ</string>
    <string name="tv_tim_kiem_theo_chu_de">Tìm kiếm theo chủ đề</string>
    <string name="tv_all">Tất cả</string>
    <string name="tv_my_share">Bài viết của tôi</string>
    <string name="tv_hot">Hot</string>
    <string name="tv_love">Yêu thích</string>
    <string name="tv_bai_viet_trong_tuan">Bài viết trong tuần</string>
    <string name="tv_tieu_de">Tiêu đề</string>
    <string name="tv_tao_chu_de_moi">Tạo chủ đề mới</string>
    <string name="tv_invalid_title_content">Xin mời nhập dữ liệu chủ đề và nội dung</string>
    <string name="tv_binh_luan">Bình luận</string>
    <string name="tv_gui">Gửi</string>
    <string name="tv_thong_bao">Thông báo</string>
    <string name="tv_cai_dat_mau_nen">Cài đặt màu nền</string>
    <string name="tv_vip">Nhập mã ứng dụng để ẩn banner quảng cáo bên dưới cùng của ứng dụng. Mỗi mã này có thời hạn vĩnh viễn. Nó chỉ mất đi khi bạn xóa ứng dụng.</string>
    <string name="tv_nhap_ma">Nhập mã</string>
    <string name="tv_nhat_ky_bi_mat">Nhật ký bí mật</string>
    <string name="tv_nhat_ky">Nhật ký</string>
    <string name="tv_no_nhat_ky">Bạn chưa ghi nhật ký</string>
    <string name="tv_kien_thuc">Kiến thức</string>
    <string name="tv_kien_thuc_s">Kiến thức %s</string>
    <string name="tv_dinh_duong">Dinh dưỡng</string>
    <string name="tv_food">Thực phẩm</string>
    <string name="tv_vitamin">Vitamin</string>
    <string name="tv_fruit">Trái cây</string>
    <string name="tv_danh_sach">Danh sách</string>
    <string name="tv_bieu_do">Biểu đồ</string>
    <string name="tv_ngay_can">Ngày cân</string>
    <string name="tv_tuan_s">Tuần %s</string>
    <string name="tv_warning_begin_record">Vui lòng nhấn nút bắt đầu</string>
    <string name="tv_warning_finish_record">Vui lòng nhấn nút kết thúc</string>
    <string name="tv_warning_no_have_any_foot">Bạn chưa theo dõi số lần đạp của bé</string>
    <string name="tv_thong_bao_nhap_noi_dung">Bạn cần nhập tiêu đề và nội dung</string>
    <string name="tv_con_lai">Còn lại</string>
    <string name="tv_tim_theo_ten">Tìm theo tên"</string>
    <string name="tv_tim_kiem_theo_ten">Tìm kiếm theo tên</string>
    <string name="tv_gioi_tinh_be">Giới tính bé:</string>
    <string name="tv_bat_dau_bang_chu">Bắt đầu bằng chữ:</string>
    <string name="tv_be_trai">Bé trai</string>
    <string name="tv_be_gai">Bé gái</string>
    <string name="tv_yeu_thich">Yêu thích</string>
    <string name="tv_tim_kiem_mon_an">Tìm kiếm món ăn</string>
    <string name="tv_mon_an_ngon">Món ăn ngon</string>
    <string name="tv_co_so_tiem_chung_uy_tin">Cơ sở tiêm chủng uy tín</string>
    <string name="tv_nhac_nho">Nhắc nhở</string>
    <string name="tv_sua_ke_hoach">Sửa kế hoạch</string>
    <string name="tv_them_ke_hoach">Thêm kế hoạch</string>
    <string name="tv_thoi_gian">Thời gian</string>
    <string name="tv_ghi_chu">Ghi chú:</string>
    <string name="tv_do_mang_vao_vien">Đồ mang vào viện</string>
    <string name="tv_quan_ly_do_so_sinh">Quản lý đồ sơ sinh</string>
    <string name="tv_mang_vao_vien">Mang vào viện</string>
    <string name="tv_luu_y">Lưu ý</string>
    <string name="tv_luu_y_mang_vao_vien">
        - Các ông chồng nên đi mượn phích nước nóng trong khi chờ vợ sinh để sau khi sinh là có nước nóng pha sữa cho bé.\n
        - Khi sữa mẹ chưa về, các mẹ có thể pha cho con sữa ngoài. Một số loại sữa các mẹ có thể dùng như:\n
        \t+ Meiji thanh số 0 nội địa Nhật\n
        \t+ Morinaga Số 1\n
        \t+ Sữa Công Thức Glico Số 0\n
        \t+ Frisolac Gold Số 1\n
        \t+ Abbott Similac Newborn IQ S1MA\n
        \t+ Enfamil A+ Số 1\n
    </string>
    <string name="tv_quan_ao_mua_dong_cho_con">Quần áo mùa đông cho con</string>
    <string name="tv_quan_ao_mua_he_cho_con">Quần áo mùa hè cho con</string>
    <string name="tv_dung_cu_y_te">Dụng cụ y tế</string>
    <string name="tv_binhsua_va_cac_dung_cu_khac">Bình sữa và các dụng cụ khác</string>
    <string name="tv_ta_va_bim">Tã và Bỉm</string>
    <string name="tv_quan_ao_sau_sinh_cho_me">Quần áo sau sinh cho mẹ</string>
    <string name="tv_bpd">BPD (mm)</string>
    <string name="tv_fl">FL (mm)</string>
    <string name="tv_EFW">EFW (g)</string>
    <string name="tv_chi_so_thai_nhi">Chỉ số thai nhi</string>
    <string name="tv_ngay_kham_thai">Ngày khám thai</string>
    <string name="tv_can_nang_gram">Cân nặng (gram)</string>
    <string name="tv_them_thong_tin_thai">Thêm thông tin thai</string>
    <string name="tv_may_anh">Máy ảnh</string>
    <string name="tv_thu_vien_anh">Thư viện ảnh</string>
    <string name="tv_ban_can_nhap_can_nang">Bạn cần nhập cân nặng</string>
    <string name="tv_gram">gram</string>
    <string name="tv_bac_si">Bác sĩ</string>
    <string name="tv_tim_kiem_bac_si">Tìm kiếm bác sĩ</string>
    <string name="tv_call">Gọi</string>
    <string name="tv_be_yeu_da_du_thang">Bé yêu đã đủ tháng</string>
    <string name="tv_s_da_doc">%s\n đã đọc</string>
    <string name="tv_s_binh_luan">%s bình luận</string>
    <string name="tv_noi_dung">Nội dung</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-3180650445840504/9246279259</string>
    <string name="tv_thong_tin_bac_si">Thông tin bác sĩ</string>
    <string name="tv_danh_gia_cua_ban">Đánh giá của bạn</string>
    <string name="tv_nhan_xet">Nhận xét</string>
    <string name="tv_an_danh">Ẩn danh</string>
    <!--    <string name="interstitial_full_screen">ca-app-pub-3180650445840504/9246279259</string>-->
</resources>