<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/clContent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAge"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/_10sdp"
            style="@style/TextViewStyle.White"
            android:textColor="@color/green_blur"
            android:textAlignment="center"
            android:text="@string/tv_tuoi_thai"
            android:background="@color/yellow_blur"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBPD"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvAge"
            app:layout_constraintStart_toEndOf="@id/tvAge"
            android:padding="@dimen/_10sdp"
            style="@style/TextViewStyle.Black"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/tv_bpd"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFL"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvAge"
            app:layout_constraintStart_toEndOf="@id/tvBPD"
            android:padding="@dimen/_10sdp"
            style="@style/TextViewStyle.Black"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/tv_fl"
            android:background="@color/yellow_blur"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEFW"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.25"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvAge"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_10sdp"
            style="@style/TextViewStyle.Black"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/tv_EFW"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintTop_toBottomOf="@id/tvAge"
            android:background="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
