<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnClose"
            android:background="@color/gray"
            android:alpha="0.5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:text="@string/tv_huy"
            android:textColor="@color/red"
            android:padding="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:text="@string/tv_save"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnClose"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:text="@string/tv_today"
            android:textColor="@color/black"
            android:padding="@dimen/_5sdp"/>

        <DatePicker
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnClose"
            android:theme="@android:style/Theme.Holo.Light"
            android:calendarViewShown="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
