<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <com.dangthuy.trolybabau.common.customview.ToolBar
           android:id="@+id/toolBar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_main"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guildLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_ten_me"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/etMomName"
            app:layout_constraintBottom_toBottomOf="@id/etMomName"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMomName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_profile"
            app:layout_constraintStart_toEndOf="@id/guildLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBabyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_ten_be"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/etBabyName"
            app:layout_constraintBottom_toBottomOf="@id/etBabyName"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBabyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_profile"
            app:layout_constraintStart_toEndOf="@id/guildLine"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/etMomName"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_can_nang"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/btnBabyInfo"
            app:layout_constraintBottom_toBottomOf="@id/btnBabyInfo"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnBabyInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:text="@string/tv_them_chi_so_thai_nhi"
            app:layout_constraintStart_toEndOf="@id/guildLine"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/etBabyName"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/ripple_react_background"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvExpect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_du_sinh"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/btnExpect"
            app:layout_constraintBottom_toBottomOf="@id/btnExpect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnExpect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_them_chi_so_thai_nhi"
            app:layout_constraintStart_toEndOf="@id/guildLine"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/btnBabyInfo"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/ripple_react_background"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_tuoi_thai"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/btnAge"
            app:layout_constraintBottom_toBottomOf="@id/btnAge"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_them_chi_so_thai_nhi"
            app:layout_constraintStart_toEndOf="@id/guildLine"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/btnExpect"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/ripple_react_background"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvKyKinhCuoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_ky_kinh_cuoi"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="@id/btnKyKinhCuoi"
            app:layout_constraintBottom_toBottomOf="@id/btnKyKinhCuoi"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnKyKinhCuoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/tv_them_chi_so_thai_nhi"
            app:layout_constraintStart_toEndOf="@id/guildLine"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/btnAge"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/ripple_react_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
