<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/toolBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clContent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAge"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_10sdp"
        style="@style/TextViewStyle.White"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:text="@string/tv_tuoi_thai" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tvAge"
        app:layout_constraintBottom_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toEndOf="@id/tvAge"
        android:background="@color/colorAccent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBPD"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvBPDGH"
        app:layout_constraintStart_toEndOf="@id/tvAge"
        style="@style/TextViewStyle.White"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/tv_bpd"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBPDGH"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvBPD"
        app:layout_constraintBottom_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toEndOf="@id/tvAge"
        style="@style/TextViewStyle.White"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="@string/tv_bpd"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tvAge"
        app:layout_constraintBottom_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toEndOf="@id/tvBPD"
        android:background="@color/colorAccent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFL"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvFLGH"
        app:layout_constraintStart_toEndOf="@id/tvBPD"
        style="@style/TextViewStyle.White"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/tv_fl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFLGH"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFL"
        app:layout_constraintBottom_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toEndOf="@id/tvBPD"
        style="@style/TextViewStyle.White"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="@string/tv_fl" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tvAge"
        app:layout_constraintBottom_toBottomOf="@id/tvAge"
        app:layout_constraintStart_toEndOf="@id/tvFL"
        android:background="@color/colorAccent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEFW"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvEFWGH"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextViewStyle.White"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:text="@string/tv_EFW"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEFWGH"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEFW"
        app:layout_constraintBottom_toBottomOf="@id/tvAge"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextViewStyle.White"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="@string/tv_EFW"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvAge"
        android:background="@color/gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>