<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            android:background="@color/green"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSecretDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/tv_nhat_ky_bi_mat"
            android:textSize="12sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/ripple_react_background"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto"
            android:text="@string/tv_nhat_ky"
            android:textSize="13sp"
            android:textColor="@color/white"
            android:padding="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_24sdp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_5sdp"
            android:tint="@color/white"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/ripple_react_background"
            android:layout_marginTop="@dimen/_24sdp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_no_nhat_ky"
            android:fontFamily="@font/roboto"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
