<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/transparent_background">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/btnMenuOne"
            app:layout_constraintBottom_toBottomOf="@id/btnMenuTwo"
            android:background="@drawable/background_bottomsheet_common"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMenuOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_quan_ly_do_so_sinh"
            style="@style/TextViewStyle.Black"
            android:textAlignment="center"
            android:padding="@dimen/_12sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ripple_react_background"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textColor="@color/blue"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintTop_toBottomOf="@id/btnMenuOne"
            android:background="@color/white"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnMenuTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            style="@style/TextViewStyle.Black"
            android:text="@string/tv_mang_vao_vien"
            android:padding="@dimen/_12sdp"
            android:textAlignment="center"
            android:background="@drawable/ripple_react_background"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textColor="@color/blue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/btnClose"
            app:layout_constraintBottom_toBottomOf="@id/btnClose"
            android:background="@drawable/background_bottomsheet_common"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_huy"
            style="@style/TextViewStyle.Black"
            app:layout_constraintTop_toBottomOf="@id/btnMenuTwo"
            android:padding="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAlignment="center"
            android:background="@drawable/ripple_react_background"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textColor="@color/blue"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/btnClose"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
